--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuex-persist",
+  "name": "@youtuosoft/vuex-persist",
   "version": "3.1.3",
   "description": "A Vuex persistence plugin in Typescript",
   "main": "dist/cjs/index.js",
