--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@youtuosoft/vuex-persist",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "description": "A Vuex persistence plugin in Typescript",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -15,7 +15,7 @@
   "types": "dist/types/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/championswimmer/vuex-persist.git"
+    "url": "git+https://github.com/youtuosoft/vuex-persist.git"
   },
   "scripts": {
     "doc:clean": "rimraf docs",
@@ -46,12 +46,12 @@
     "persist",
     "localstorage"
   ],
-  "author": "Arnav Gupta <championswimmer@gmail.com>",
+  "author": "haohetao <haohetao@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/championswimmer/vuex-persist/issues"
+    "url": "https://github.com/youtuosoft/vuex-persist/issues"
   },
-  "homepage": "https://github.com/championswimmer/vuex-persist#readme",
+  "homepage": "https://github.com/youtuosoft/vuex-persist#readme",
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/lodash": "^4.6.4",
